PROJECT(cmake_test)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_SRC_LIST ../../base/myadd.cc ../../base/mysub.cc)
INCLUDE_DIRECTORIES( ../../base)
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
ADD_LIBRARY(operator STATIC ${CMAKE_SRC_LIST})
SET_TARGET_PROPERTIES(operator PROPERTIES OUTPUT_NAME "operator")
SET(LIBRARY_OUTPUT_PATH lib)
ADD_SUBDIRECTORY( src )

